--- a/src/Sitecore.Support.346899/Sitecore.Support.346899.csproj
+++ b/src/Sitecore.Support.346899/Sitecore.Support.346899.csproj
@@ -77,7 +77,9 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
