--- a/src/Sitecore.Support.346899/App_Config/Include/zzz/Sitecore.Support.346899.config
+++ b/src/Sitecore.Support.346899/App_Config/Include/zzz/Sitecore.Support.346899.config
@@ -1,4 +1,12 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
-  <sitecore role:require="Standalone OR ContentManagement OR ContentDelivery OR Processing OR Reporting">
-  </sitecore>
+    <sitecore role:require="Standalone OR ContentManagement OR ContentDelivery OR Processing OR Reporting">
+        <events>
+            <event name="publish:end">
+                <handler patch:instead="*[@type='Sitecore.XA.Foundation.Multisite.EventHandlers.HtmlCacheClearer, Sitecore.XA.Foundation.Multisite']" type="Sitecore.Support.XA.Foundation.Multisite.EventHandlers.HtmlCacheClearer, Sitecore.Support.346899" method="OnPublishEnd" />
+            </event>
+            <event name="publish:end:remote">
+                <handler patch:instead="*[@type='Sitecore.XA.Foundation.Multisite.EventHandlers.HtmlCacheClearer, Sitecore.XA.Foundation.Multisite']" type="Sitecore.Support.XA.Foundation.Multisite.EventHandlers.HtmlCacheClearer, Sitecore.Support.346899" method="OnPublishEndRemote" />
+            </event>
+        </events>
+    </sitecore>
 </configuration>
